src/objects/Exposure__c.object
<CustomObject>
    <description>Exposure Data</description>
    <fields>
        <fullName>Contact_for_Exposure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>#STDFLD</description>
        <inlineHelpText>Email address of the person responsible for this exposure record</inlineHelpText>
        <label>Contact for Exposure</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exposures</relationshipLabel>
        <relationshipName>Exposures_as_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <description>#STDFLD Effective date of new or updated Exposure record</description>
        <label>Evaluation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchy</label>
        <referenceTo>rkl__RK_Hierarchy_Node__c</referenceTo>
        <relationshipLabel>Exposures</relationshipLabel>
        <relationshipName>Exposures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>#STDFLD Measurement type for exposure record e.g. actual sales, miles driven, production counts, etc.</description>
        <inlineHelpText>Measurement type for exposure record e.g. actual sales, miles driven, production counts, etc.</inlineHelpText>
        <label>Metric</label>
        <picklist>
            <picklistValues>
                <fullName>Actual Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgeted Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Counts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headcount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miles Driven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Counts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square Footage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>#STDFLD</description>
        <inlineHelpText>Coverage or other grouping to which this exposure most directly applies</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers&apos; Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>#STDFLD Exposure Value</description>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exposure</label>
    <nameField>
        <displayFormat>EXP{0000000}</displayFormat>
        <label>Exposure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exposures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>